# slotto

./: .env.example  .gitignore  .npmrc  Anchor.toml  Cargo.toml  devnet-tokens.json  next.config.ts  package-lock.json  package.json  prisma.config.ts  rust-toolchain.toml  tsconfig.anchor.json  tsconfig.json  vercel.json
.cursor/rules/: slotto-project-listing-reviews.mdc
.github/workflows/: deploy-vercel.yml  lottery-crank.yml
docs/: mainnet-rollout.md  maintenance-mode.md  onchain-lottery-v1-spec.md  social-connect.md  social-preview.md  spl-rollout.md  switchboard-vrf.md  vercel-cron-hobby.md
idl/: slotto_lottery.json
prisma/: schema.prisma  seed.ts
programs/slotto_lottery/: Cargo.toml
programs/slotto_lottery/src/: lib.rs  switchboard_randomness.rs
public/: free-entry-token.json
scripts/: add-admin-wallet.ts  anchor-build.sh  backfill-draw-paid-with.ts  debug-draw-paid-with.ts  discord-backfill-draw-winner.ts  discord-register-ticket-bot-commands.ts  fix-profile-db-push.ts  generate-idl.mjs  inspect-draw-chain.ts  inspect-draw-db.ts  lottery-deploy-devnet.sh  lottery-deploy-mainnet.sh  lottery-import-phantom-key.mjs  lottery-init-ticket-chunk.ts  lottery-initialize-devnet.ts  lottery-initialize.ts  lottery-keeper.ts  lottery-rpc.ts  lottery-settle-draw.ts  lottery-setup-test-wallet.sh  lottery-simulate-buy-sol.ts  lottery-test-integration.sh  lottery-test-lib.sh  migrate-wallet-profile.ts  mint-devnet-spl.ts  mint-free-entry-token.ts  move-node-modules-aside.mjs  pin-sbf-lockfile.sh  probe-collection-supply.mjs  repair-discord-avatars.ts  repair-draw-spl.ts  rm-npm-temp-dirs.mjs  script-prisma.ts  setup-github-cron-secret.sh  x-backfill-draw-winner.ts  x-test-post.ts
src/: auth.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: auth-session-provider.tsx  brand-png.tsx  discord-logo.tsx  discord-ticket-bot-modal.tsx  home-draws-section.tsx  home-lottery-section.tsx  maintenance-gate.tsx  maintenance-overlay.tsx  price-ticker.tsx  site-footer.tsx  site-header-nav.tsx  site-header.tsx  social-disconnect-button.tsx  social-profile-cell.tsx  social-profile-tags.tsx  (+2 more)
tests/: pdas.ts  slotto_lottery.ts
(+208 files in other folders)
