[package]
name = "slotto-lottery"
version = "0.1.0"
description = "Slotto on-chain lottery (Anchor)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "slotto_lottery"

[features]
no-entrypoint = []
no-idl-build = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
