[package]
name = "slotto-lottery"
version = "0.1.0"
description = "Slotto on-chain lottery (Anchor)"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "slotto_lottery"

[features]
no-entrypoint = []
no-idl-build = []
cpi = ["no-entrypoint"]
# Propagate `init_if_needed` account expansion even if the dependency line is missing the feature.
default = ["_anchor_init_if_needed"]
_anchor_init_if_needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-lang/init-if-needed", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["associated_token", "token"] }

# Anchor / solana_program macros emit cfgs Rust 1.85+ does not know by default.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("no-idl", "no-log-ix-name"))',
] }
